Mod 7/07.07/InteractiveMaze/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
/Applications/BlueJ.app/Contents/JDK/Home/bin/javadoc
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
/Applications/BlueJ.app/Contents/Resources/Java/bluejcore.jar:/Applications/BlueJ.app/Contents/Resources/Java/junit-4.11.jar:/Applications/BlueJ.app/Contents/Resources/Java/hamcrest-core-1.3.jar:/Applications/BlueJ.app/Contents/Resources/Java/lang-stride.jar:/Users/Him/Downloads/bookClasses:/Applications/BlueJ.app/Contents/Resources/Java/userlib/pi4j-core.jar:/Applications/BlueJ.app/Contents/Resources/Java/userlib/pi4j-device.jar:/Applications/BlueJ.app/Contents/Resources/Java/userlib/pi4j-gpio-extension.jar:/Applications/BlueJ.app/Contents/Resources/Java/userlib/pi4j-service.jar:/Users/Him/Desktop/Java/Mod 7/07.07/InteractiveMaze
-d
/Users/Him/Desktop/Java/Mod 7/07.07/InteractiveMaze/doc
-encoding
UTF-8
-charset
UTF-8
/Users/Him/Desktop/Java/Mod 7/07.07/InteractiveMaze/ModuleProject.java
<---- end of javadoc command ---->
Loading source file /Users/Him/Desktop/Java/Mod 7/07.07/InteractiveMaze/ModuleProject.java...
/Users/Him/Desktop/Java/Mod 7/07.07/InteractiveMaze/ModuleProject.java:18: error: not a statement
        Turtle new
        ^
/Users/Him/Desktop/Java/Mod 7/07.07/InteractiveMaze/ModuleProject.java:18: error: ';' expected
        Turtle new
              ^
2 errors
